[package]
name = "safe_entropy_check"
version = "0.1.0"
authors = ["David Irvine <david.irvine@maidsafe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
walkdir = "~2.3.2"
thiserror = "~1.0.24"
